--- a/Notebooks/PHYS 308 - 06 - Accuracy.ipynb
+++ b/Notebooks/PHYS 308 - 06 - Accuracy.ipynb
@@ -4,16 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook 06 - Accuracy \n",
+    "# PHYS 308 - Notebook 06 - Accuracy \n",
     "\n",
-    "See Chapter 4 for a reference"
+    "Interactive learning notebook developed by J. Dolen for PHYS 308 at Purdue University Northwest\n",
+    "\n",
+    "Reference: Mark Newman \"Computational Physics\" Chapter 4 "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Allowable ranges in python"
+    "## Allowable ranges in python"
    ]
   },
   {
@@ -68,6 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Overflow and underflow\n",
     "\n",
     "#### Max values\n",
     "\n",
@@ -84,18 +87,20 @@
     "\n",
     "#### Overflow \n",
     "* Definition: when you execute a statment which produces a float above the largest possible floating point number\n",
-    "* When you overflow, python does not return an error message. \n",
+    "* When you overflow, python does **not** return an error message (it may return a warning). \n",
     "    * Instead, python sets the variable equal to infinity (inf)\n",
     "        * Check for this otherwise your program could return wrong answers\n",
     "    \n",
     "#### Min values (smallest magnitdue)\n",
     "In python 3:\n",
-    "* float are limited to $\\sim 10^{-308}$ \n",
+    "* In theory, floats are limted to $\\sim 10^{-308}$ \n",
+    "* In practice, your system may allow smaller numbers but with lost precision (\"gradual underflow)\n",
+    "* Example: On my system floats are limited to $\\sim 10^{-324}$ \n",
     "\n",
     "\n",
     "#### Underflow \n",
     "* Definition: when you execute a statment which produces a float with magnitude below the smallest possible floating point number\n",
-    "* When you underflow, python does not return an error message. \n",
+    "* When you underflow, python does **not** return an error message (it may return a warning). \n",
     "    * Instead, python sets the variable equal to 0.0\n",
     "        * Check for this otherwise your program could return wrong answers\n",
     "   "
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +148,8 @@
       "<class 'float'>\n",
       "x = 1.7e+308\n",
       "y = inf\n",
-      "w = 2.224242424242424e-308\n",
-      "z = 2.2242424242424e-310\n"
+      "w = 1e-323\n",
+      "z = 0.0\n"
      ]
     }
    ],
@@ -153,29 +158,65 @@
     "x = 1.7e308\n",
     "print(type(x))\n",
     "y = x * 10\n",
-    "w = 2.2242424242424242424e-308  #2.5e-323\n",
-    "z = w * 0.01\n",
+    "w = 1.0e-323  #2.5e-323\n",
+    "z = w * 0.1\n",
+    "\n",
     "print(\"x =\",x)\n",
     "print(\"y =\",y)\n",
     "print(\"w =\",w)\n",
-    "print(\"z =\",z)"
+    "print(\"z =\",z)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 1.1234567891234568e-307\n",
+      "b = 1.1234567891234565e-308\n",
+      "c = 1.12345678912346e-309\n",
+      "d = 1.12345678912344e-310\n",
+      "e = 1.1234567891235e-311\n",
+      "f = 1.123456789124e-312\n",
+      "g = 1.1234567891e-313\n",
+      "h = 1.123456789e-314\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1.123456789123456789e-307  \n",
+    "b = 1.123456789123456789e-308 \n",
+    "c = 1.123456789123456789e-309 \n",
+    "d = 1.123456789123456789e-310 \n",
+    "e = 1.123456789123456789e-311 \n",
+    "f = 1.123456789123456789e-312 \n",
+    "g = 1.123456789123456789e-313 \n",
+    "h = 1.123456789123456789e-314 \n",
+    "print(\"a =\",a)\n",
+    "print(\"b =\",b)\n",
+    "print(\"c =\",c)\n",
+    "print(\"d =\",d)\n",
+    "print(\"e =\",e)\n",
+    "print(\"f =\",f)\n",
+    "print(\"g =\",g)\n",
+    "print(\"h =\",h)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This seems to disagree with my statement that the smallest magnitude floats allowed by python are $\\sim 10^{-308}$ \n",
-    "\n",
-    "Let's investigate further\n",
-    "\n",
     "Python has a module sys which allows you to check computer specific parameters:\n",
     "https://docs.python.org/3.6/library/sys.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +243,7 @@
        "sys.float_info(max=1.7976931348623157e+308, max_exp=1024, max_10_exp=308, min=2.2250738585072014e-308, min_exp=-1021, min_10_exp=-307, dig=15, mant_dig=53, epsilon=2.220446049250313e-16, radix=2, rounds=1)"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +263,7 @@
        "1.7976931348623157e+308"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +283,7 @@
        "2.2250738585072014e-308"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "hmmm. this still does not match. Lets experiment with another function provided by numpy:  nextafter\n",
+    "Lets experiment with another function provided by numpy:  nextafter\n",
     "https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.nextafter.html\n",
     "\n",
     "nextafter returns the next discrete representable floating point number after some input value\n",
@@ -269,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.94065645841e-324\n"
+      "5e-324\n"
      ]
     }
    ],
@@ -291,7 +332,7 @@
    "source": [
     "According to nextafter the smallest number that is bigger than 0 is\n",
     "\n",
-    "4.94065645841e-324\n",
+    "5e-324\n",
     "\n",
     "But sys.float_info.min reports\n",
     "\n",
@@ -489,12 +530,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Final warning: logical errors can happen\n"
+    "### Warning:\n",
+    "Logical errors can happen when you are dealing with overflow and underflow situations\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +545,7 @@
        "True"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +729,7 @@
        "9223372036854775807"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python float precision and numerical error\n",
+    "## Python float precision and numerical error\n",
     "\n",
     "recall earlier example:"
    ]
@@ -809,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +860,7 @@
        "0.30000000000000004"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +897,7 @@
    "source": [
     "### Comparing floats\n",
     "\n",
-    "As stated before, never text equality of two floats\n"
+    "As stated before, never test equality of two floats\n"
    ]
   },
   {
@@ -930,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -942,6 +984,7 @@
     }
    ],
    "source": [
+    "x = 1.1+2.2\n",
     "epsilon = 1e-12\n",
     "if abs(x-3.3)<epsilon:\n",
     "    print(\"equal\")"
@@ -949,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -963,11 +1006,34 @@
    ],
    "source": [
     "x = 3.3\n",
-    "print(x.as_integer_ratio())\n",
+    "# float.as_integer_ratio()\n",
+    "#  Returns a pair of integers whose ratio is exactly \n",
+    "#  equal to the original float and with a positive denominator.\n",
+    "print(x.as_integer_ratio()) # \n",
     "if x==x.as_integer_ratio():\n",
     "    print(\"equal\")\n",
     "else:\n",
     "    print(\"not equal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3715469692580659/1125899906842624"
    ]
   },
   {
@@ -1163,7 +1229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loss of signficance\n",
+    "## Loss of signficance\n",
     "\n",
     "Suppose we had a machine with only 5 digits of precision \n",
     "\n",
@@ -1190,7 +1256,7 @@
     "\n",
     "Also note that the correct answer 3.32e-5 is within the precision of our machine.\n",
     "\n",
-    "\"Catastrophic cancellation\" - the loss of significance when subtracting two numbers which have only a small difference\n",
+    "**\"Catastrophic cancellation\"** - the loss of significance when subtracting two numbers which have only a small difference\n",
     "\n",
     "This can also occur when a small number is added or subtracted from a much larger one:\n",
     "```\n",
@@ -1202,24 +1268,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "999999.9998389754\n",
-      "0.0001610246254131198\n"
+      "99999998.74541782\n",
+      "1.2545821815729141\n"
      ]
     }
    ],
    "source": [
+    "# Caution: This takes a while to run\n",
+    "\n",
     "a=0.0\n",
-    "for i in range(10000000):\n",
+    "for i in range(1000000000):  #1e9\n",
     "    a+=0.1\n",
-    "print(a)\n",
-    "print(1000000-a)"
+    "print(a)  #We expect 1e8\n",
+    "print(100000000-a) #Difference"
    ]
   },
   {
@@ -1339,7 +1407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numpy data types\n",
+    "## Numpy data types\n",
     "\n",
     "numPy has amy more types than python\n",
     "https://docs.scipy.org/doc/numpy-1.13.0/user/basics.types.html\n",
@@ -1541,7 +1609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
