Fitting notebook fix data

--- a/Notebooks/PHYS 308 - 07 - Fitting Data.ipynb
+++ b/Notebooks/PHYS 308 - 07 - Fitting Data.ipynb
@@ -1991,7 +1991,7 @@
     "\n",
     "```\n",
     "import numpy as np\n",
-    "date, temperature = np.loadtxt('Data/temperatures_average.txt', unpack=True)\n",
+    "date, temperature = np.loadtxt('https://raw.githubusercontent.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master/Data/temperatures_average.txt', unpack=True)\n",
     "```\n",
     "\n",
     "* Make a plot with the date on the x-axis and the average temperature on the y-axis\n",
@@ -2065,21 +2065,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1995.00274  1995.00548  1995.00821 ...,  2013.27926  2013.282    2013.28474]\n",
-      "[  0.944444  -1.61111   -3.55556  ...,  10.5556     8.94444   11.1667  ]\n"
+      "[1995.00274 1995.00548 1995.00821 ... 2013.27926 2013.282   2013.28474]\n",
+      "[ 0.944444 -1.61111  -3.55556  ... 10.5556    8.94444  11.1667  ]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "date, temperature = np.loadtxt('../Data/temperatures_average.txt', unpack=True)\n",
+    "date, temperature = np.loadtxt('https://raw.githubusercontent.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master/Data/temperatures_average.txt', unpack=True)\n",
     "\n",
     "print(date)\n",
     "print(temperature)"
