Update HW2 notebook

--- a/Homework/Homework 02.ipynb
+++ b/Homework/Homework 02.ipynb
@@ -14,22 +14,42 @@
     "\n",
     "https://github.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/blob/master/Data/sunspots.txt\n",
     "\n",
-    "\n",
-    "If you are using binder the file is already there. If you are using Jupyter on your laptop you will have to download the file and keep in in the same directory where your jupyter notebook is saved\n",
-    "\n",
-    "data = np.loadtxt(\"sunspots.txt\",float) \n",
-    "\n",
-    "or in a subdirectory\n",
-    "\n",
-    "data = np.loadtxt(\"Data/sunspots.txt\",float) \n"
+    "You can load the data with Numpy as follows:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "data = np.loadtxt(\"http://www-personal.umich.edu/~mejn/cp/data/stars.txt\",float)\n",
+    "months = data[:,0] # number of months since January 1749\n",
+    "Nspots = data[:,1] # number of sunspots in a given month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15.73 17.01 15.86 15.98 16.73 10.19 16.56 17.99 15.   15.38]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Nspots[0:10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -50,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
