Update fitting notebook

--- a/Notebooks/PHYS 308 - 07 - Fitting Data.ipynb
+++ b/Notebooks/PHYS 308 - 07 - Fitting Data.ipynb
@@ -509,7 +509,7 @@
     "\n",
     "$E_{xx} = \\frac{1}{N} \\sum x_i^2$\n",
     "\n",
-    "$E_xy = \\frac{1}{N} \\sum x_i y_i$\n",
+    "$E_{xy} = \\frac{1}{N} \\sum x_i y_i$\n",
     "\n",
     "We just showed that we will need to find the value of some sums. We can do this easily with numpy:\n",
     "\n"
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -533,6 +533,7 @@
     }
    ],
    "source": [
+    "# Calculate sums needed for our least squares minimization\n",
     "xa = np.array(xpoints,float)\n",
     "ya = np.array(ypoints,float)\n",
     "\n",
@@ -549,6 +550,40 @@
     "print('sum y = ',ya_sum)\n",
     "print('sum x^2 = ',xa_squared_sum)\n",
     "print('sum x*y = ',xa_times_ya_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we used some new numpy tools np.square() and np.multiply()\n",
+    "\n",
+    "https://numpy.org/doc/stable/reference/generated/numpy.square.html\n",
+    "\n",
+    "https://numpy.org/doc/stable/reference/generated/numpy.multiply.html\n",
+    "\n",
+    "contrast this to np.dot()\n",
+    "https://numpy.org/doc/stable/reference/generated/numpy.dot.html\n",
+    "\n",
+    "```\n",
+    "np.square()\n",
+    "x = np.array([A,B])\n",
+    "x**2 = [A B]**2 = [A**2 B**2] = np.square(x) = np.power(x, 2)\n",
+    "(note, some of these will be faster than others)\n",
+    "\n",
+    "np.multiply()\n",
+    "|A B| ⊙ |E F| = |A*E B*F|\n",
+    "|C D|   |G H|   |C*G D*H|\n",
+    "\n",
+    "[A B ] . [C D ] = [A*C  B*D]  \n",
+    "\n",
+    "\n",
+    "np.dot()\n",
+    "|A B| . |E F| = |A*E+B*G A*F+B*H|\n",
+    "|C D|   |G H|   |C*E+D*G C*F+D*H|\n",
+    "\n",
+    "[A B ] . [C D ] = A*C + B*D  \n",
+    "```"
    ]
   },
   {
@@ -570,13 +605,15 @@
     }
    ],
    "source": [
+    "# Complete our least squares minimization calcuation \n",
+    "#   to find the slope a and the y-intercept b\n",
     "Ex = (1/N)*xa_sum\n",
     "Ey = (1/N)*ya_sum\n",
     "Exx = (1/N)*xa_squared_sum\n",
     "Exy = (1/N)*xa_times_ya_sum\n",
     "\n",
-    "a = (Exy - Ex*Ey) / (Exx - Ex**2)\n",
-    "b = (Ey*Exx -Ex*Exy) / (Exx - Ex**2)\n",
+    "a = (Exy - Ex*Ey) / (Exx - Ex**2)  # slope\n",
+    "b = (Ey*Exx -Ex*Exy) / (Exx - Ex**2) # y-intercept\n",
     "\n",
     "print('Ex = ', Ex)\n",
     "print('Ey = ', Ey)\n",
@@ -2164,6 +2201,13 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
