--- a/Homework/PHYS 308 - Project 1 - Global Temperature.ipynb
+++ b/Homework/PHYS 308 - Project 1 - Global Temperature.ipynb
@@ -7,14 +7,14 @@
     "# PHYS 308 - Project 1 - Planet Earth's Global Temperature\n",
     "\n",
     "\n",
-    "In this project we will download temperature data from NASA’s Goddard Institute for Space Studies (**GISS**) and analyze it using **pandas** and **seaborn**. You can form groups of 2-3 people for this project. Work together on reading in and cleaning the data. Once you have a notebook containing the cleaned dataframe you can work together or split up making each of the required plots.  \n"
+    "In this project we will download temperature data from NASA’s Goddard Institute for Space Studies (**GISS**) and analyze it using **pandas** and **seaborn**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your group will submit this notebook so please enter the names of all group members below:"
+    "Include your name below:"
    ]
   },
   {
@@ -59,7 +59,7 @@
     "            \n",
     "2. Setup - Set the \"Year\" column as the dataframe index<br><br>\n",
     "\n",
-    "3. Data cleaning - Note that the 2019 data is very recent (up to August 2019) and there is data missing for September->December. The missing data appears as three stars (\"`***`\"). We need to clean this up by replacing the stars with something that pandas understands: \"NaN\" = Not a Number. Also we should make sure that all datapoints are floats and not strings. We can accomplish this using the following lines (where df is the name I have given to the dataframe):\n",
+    "3. Data cleaning - Note that the 2021 data is very recent (up to August 2021) and there is data missing for September->December. The missing data appears as three stars (\"`***`\"). We need to clean this up by replacing the stars with something that pandas understands: \"NaN\" = Not a Number. Also we should make sure that all datapoints are floats and not strings. We can accomplish this using the following lines (where df is the name I have given to the dataframe):\n",
     "~~~~\n",
     "df = df.replace(\"***\", \"NaN\")\n",
     "df = df.astype(float) \n",
@@ -170,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
