Update PHYS 308 - 11 - Integration - Part A.ipynb

--- a/Notebooks/PHYS 308 - 11 - Integration - Part A.ipynb
+++ b/Notebooks/PHYS 308 - 11 - Integration - Part A.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "ce6ec230",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "id": "9979a75a",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 34,
    "id": "1ef9dece",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "id": "9cb086ab",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "id": "7d0bc059",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "id": "94e94edb",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
     "a = 0.0 # Lower bound\n",
     "b = 2.0 # Upper bound\n",
     "w = (b-a)/N # Step size\n",
-    "print(\"Step size \",h)\n",
+    "print(\"Step size \",w)\n",
     "\n",
     "# Create an array entry for each step \n",
     "x = np.linspace(a, b, N, endpoint = False)\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "id": "71136a8b",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 39,
    "id": "d35669b8",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 40,
    "id": "d332d989",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
     "a = 0.0 # Lower bound\n",
     "b = 2.0 # Upper bound\n",
     "w = (b-a)/N # Step size\n",
-    "print(\"Step size \",h)\n",
+    "print(\"Step size \",w)\n",
     "\n",
     "# Create an array entry for each step \n",
     "x = np.linspace(a+w/2, b+w/2, N, endpoint = False)\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 41,
    "id": "a1962e0a",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 42,
    "id": "73861fdf",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "id": "3b46c3a8",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 44,
    "id": "115b3724",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 45,
    "id": "d46aab32",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "Text(0, 0.5, 'Integral Result')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 46,
    "id": "bc1c5d7b",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "(4.3, 4.5)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 47,
    "id": "7a789d04",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
     "a = 0.0 # Lower bound\n",
     "b = 2.0 # Upper bound\n",
     "w = (b-a)/N # Step size\n",
-    "print(\"Step size \",h)\n",
+    "print(\"Step size \",w)\n",
     "\n",
     "\n",
     "\n",
