--- a/Homework/Homework 03 - Numerical Integration and Derivatives.ipynb
+++ b/Homework/Homework 03 - Numerical Integration and Derivatives.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "### 1. Problem 5.1\n",
     "\n",
-    "In class we learned how to calculate a derivative for a given function. In this problem we don't know the functional form. Instead we have sampled points from a measurement of velocity as a function of time. Modify your trapezoid integral code to handle sampled data."
+    "In class we learned how to calculate a integral for a given function. In this problem we don't know the functional form. Instead we have sampled points from a measurement of velocity as a function of time. Modify your trapezoid integral code to handle sampled data."
    ]
   },
   {
@@ -43,13 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "time, velocity = np.loadtxt('http://www-personal.umich.edu/~mejn/cp/data/velocities.txt', unpack=True)\n"
+    "import matplotlib.pyplot as plt\n",
+    "time, velocity = np.loadtxt('http://www-personal.umich.edu/~mejn/cp/data/velocities.txt', unpack=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
