--- a/Notebooks/PHYS 308 - 17 - Randomness, Random Walks, and Monte Carlo Methods.ipynb
+++ b/Notebooks/PHYS 308 - 17 - Randomness, Random Walks, and Monte Carlo Methods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook 15\n",
+    "# Notebook 17\n",
     "\n",
     "### Random numbers from numpy\n",
     "Really they are \"pseudo-random\". They approximate a truly random sequence, but they are determined by an algorithm and are completely determined by the \"seed\""
@@ -861,6 +861,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
