Update Homework 04 - 2021.ipynb

--- a/Homework/Homework 04 - 2021.ipynb
+++ b/Homework/Homework 04 - 2021.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "Estimate the value of pi using a Monte Carlo method. The equation for a circle with radius=1 is $x^2+y^2 = 1$. If we randomly pick an x-value and a y-value between -1 and 1 there is some probability that the (x,y) point will be located within that circle ($x^2+y^2 \\le 1$) and some probability it will lie outside of that circle. If we randomly pick thousands of points we can measure the ratio of points which lie inside the circle to the total number of points. All of the points will lie within a square with corners (1,1), (1,-1), (-1,-1), (-1,1) which corresponds to s square with sides of length 2. Therefore we know the area of the square to be 4. If we multiple the ratio of points within the circle by the area of the square, we will estimate the area of the circle. The area of our circle should be $\\pi r^2 = \\pi (1)^2 = \\pi$, so in doing so we will be estimating the value of pi.\n",
     "\n",
-    "<img src=\"attachment:MonteCarloCircle.png\" width=\"500\">\n",
+    "<img src=\"https://github.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/raw/master/Homework/MonteCarloIntegration.png\">\n",
+    "\n",
     "\n",
     "1. Write code which randomly generates 10000 (x,y) points in order to estiatmate the area of a circle as described above.\n",
     "\n",
