Organizing HW again

--- a/Homework/Homework_01.ipynb
+++ b/Homework/Homework_01.ipynb
@@ -6,7 +6,7 @@
         "id": "UC274jPL-ZcD"
       },
       "source": [
-        "## Homework 1"
+        "## Homework 1 - Learning Python\n"
       ]
     },
     {
@@ -24,7 +24,7 @@
         "**Problem 1**: Newman textbook Exercise 2.2: “Altitude of a Satellite” parts (b), (c), and (d).\n",
         "\n",
         "A scan of the problem can be found here:\n",
-        "<img src=\"https://raw.githubusercontent.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master/Homework/Newman_Chapter_2_Problem_2.jpg\">\n"
+        "<img src=\"https://raw.githubusercontent.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master/Homework/Problem_Images/Newman_Chapter_2_Problem_2.jpg\">\n"
       ],
       "metadata": {
         "id": "Z1a_0H_aBaZJ"
@@ -162,7 +162,7 @@
         "\n",
         "Please see here:\n",
         "\n",
-        "<img src=\"https://raw.githubusercontent.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master/Homework/Newman_Chapter_2_Problem_7.jpeg\">"
+        "<img src=\"https://raw.githubusercontent.com/jdolen/PurdueNorthwest_PHYS308_ScientificComputing1/master/Homework/Problem_Images/Newman_Chapter_2_Problem_7.jpeg\">"
       ]
     },
     {
