--- a/Notebooks/RocketSim.ipynb
+++ b/Notebooks/RocketSim.ipynb
@@ -16,14 +16,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "YxzrSLa3FMNK",
-        "outputId": "59e38369-0cb8-4e84-c7d1-d3a81655c017"
+        "outputId": "0f18e358-9518-4e67-8d19-52046fa699d3"
       },
       "outputs": [
         {
@@ -67,8 +67,17 @@
       ],
       "source": [
         "# Estimate the 2D trajectory of a rocket using a 4th order Runge-Kutta method.\n",
-        "#   Forces considered: Thrust, gravity and quadratic drag.\n",
-        "#   Assumptions made: Zero angle of attack, zero lift.\n",
+        "#   Forces considered:\n",
+        "#     - Thrust\n",
+        "#     - Gravity\n",
+        "#     - Quadratic drag.\n",
+        "#   Assumptions made:\n",
+        "#     - Constant gravitational force\n",
+        "#     - Constant air density\n",
+        "#     - Constant thrust\n",
+        "#     - Non-rotating earth and level ground\n",
+        "#     - Zero angle of attack\n",
+        "#     - Zero lift.\n",
         "# Purdue University Northwest - PHYS 30800 Scientific Computation I - Professor Dolen\n",
         "\n",
         "import numpy as np\n",
@@ -83,7 +92,7 @@
         "    Applies Newton's Second Law (a = F/m) using the rocket's current mass.\n",
         "\n",
         "    Args:\n",
-        "        state_vector (np.ndarray): The current state if the rocket [x, y, vx, vy].\n",
+        "        state_vector (np.ndarray): The current state of the rocket [x, y, vx, vy].\n",
         "        params (dict): A dictionary of all physical constants.\n",
         "        current_time (float): The simulation time, used to check if the motor is firing.\n",
         "        current_mass (float): The rocket's current mass, which changes during the burn.\n",
@@ -326,7 +335,6 @@
         "\n",
         "\n",
         "    # Plot the Height vs time\n",
-        "    speed = [np.sqrt(ivx**2 + ivy**2) for ivx, ivy in zip(vx, vy)]\n",
         "    plt.figure(figsize=(12, 6))\n",
         "    plt.plot(time[:burnout_index+1], y_pos[:burnout_index+1], color='red', linewidth=3, label='Powered Flight')\n",
         "    plt.plot(time[burnout_index:], y_pos[burnout_index:], color='royalblue', linestyle='--', label='Coasting Flight')\n",
@@ -350,6 +358,15 @@
         "    plt.show()\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "U0P_wGx6eVwP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
