--- a/Homework/Homework_02.ipynb
+++ b/Homework/Homework_02.ipynb
@@ -55,30 +55,75 @@
         "def fourMoment(array2d):\n",
         "  return np.sum(array2d, axis=0)\n",
         "\n",
-        "print(\"The total four-momentum of the event is: \", fourMoment(particles))\n",
+        "print(\"\\nPart 1 Solution: \\n\\nThe total four-momentum of the event is: \", fourMoment(particles))\n",
         "\n",
         "#Solution to 2:\n",
         "\n",
-        "def invariant_mass_of_event(array):\n",
-        "  return np.sqrt(array[0]**2-array[1]**2-array[2]**2-array[3]**2)\n",
+        "def invariantMassOfEvent(array):\n",
+        "  return np.sqrt(np.clip(array[0]**2-array[1]**2-array[2]**2-array[3]**2, 0, None))\n",
         "\n",
-        "print(\"The invariant mass of event for the total four-momentum above is: \", invariant_mass_of_event(fourMoment(particles)))"
+        "print(\"\\nPart 2 Solution: \\n\\nThe invariant mass of event for the total four-momentum above is: \", invariantMassOfEvent(fourMoment(particles)))\n",
+        "\n",
+        "#Solution to 3:\n",
+        "\n",
+        "def maxTransMomentum(array2d):\n",
+        "  trans_momentums = []\n",
+        "\n",
+        "  for row in array2d:\n",
+        "    trans_momentums.append(np.sqrt(np.clip(row[1]**2+row[2]**2, 0, None)))\n",
+        "\n",
+        "  np_trans_momentums = np.array(trans_momentums)\n",
+        "  max_trans_momentum = np_trans_momentums.max()\n",
+        "\n",
+        "  max_index = np.where(np_trans_momentums == max_trans_momentum)\n",
+        "\n",
+        "  return np.array([max_trans_momentum, max_index[0][0]])\n",
+        "\n",
+        "print(\"\\nPart 3 Solution: \\n\\nThe maximum tranverse momentum for the provided data is: \", maxTransMomentum(particles)[0], \" at index: \", maxTransMomentum(particles)[1])\n",
+        "\n",
+        "#Solution to 4:\n",
+        "\n",
+        "def individualParticleMasses(array2d):\n",
+        "  temp_list = []\n",
+        "\n",
+        "  for row in array2d:\n",
+        "    temp_list.append(invariantMassOfEvent(row))\n",
+        "\n",
+        "  return np.array(temp_list)\n",
+        "\n",
+        "print(\"\\nPart 4 Solution: \\n\\nThe individual particles masses are as follows:\\n\", individualParticleMasses(particles))"
       ],
       "metadata": {
         "id": "6rzLbpCdHhqi",
-        "outputId": "c5f7ad5d-f583-450f-a986-8698208d9ce1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "902ccc6d-02c9-49c7-9129-47b2e5adf985"
       },
-      "execution_count": 19,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
+            "Part 1 Solution: \n",
+            "\n",
             "The total four-momentum of the event is:  [91.3  1.2 -0.1 37.6]\n",
-            "The invariant mass of event for the total four-momentum above is:  83.18942240453411\n"
+            "\n",
+            "Part 2 Solution: \n",
+            "\n",
+            "The invariant mass of event for the total four-momentum above is:  83.18942240453411\n",
+            "\n",
+            "Part 3 Solution: \n",
+            "\n",
+            "The maximum tranverse momentum for the provided data is:  15.140013210033867  at index:  6.0\n",
+            "\n",
+            "Part 4 Solution: \n",
+            "\n",
+            "The individual particles masses are as follows:\n",
+            " [2.84956137 0.78740079 1.86010752 0.47958315 1.92613603 0.76811457\n",
+            " 4.51442134 1.3190906  0.63245553 0.        ]\n"
           ]
         }
       ]
